--- a/pyrota.ipynb
+++ b/pyrota.ipynb
@@ -1198,6 +1198,26 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "df[['Day reg', 'Night reg', 'L1 reg']].stack().value_counts().mean() #sanity check"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 37,
+       "text": [
+        "55.466666666666669"
+       ]
+      }
+     ],
+     "prompt_number": 37
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
       "df[['Day reg', 'Night reg', 'L1 reg']].stack().value_counts()"
      ],
      "language": "python",
@@ -1206,7 +1226,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 36,
+       "prompt_number": 38,
        "text": [
         "name10    62\n",
         "name3     60\n",
@@ -1227,7 +1247,7 @@
        ]
       }
      ],
-     "prompt_number": 36
+     "prompt_number": 38
     },
     {
      "cell_type": "code",
